<resources>
    <string name="app_name">BikeShare</string>
    <string name="last_added">Last added:</string>
    <string name="what_bike">What bike?</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="where">Where?</string>
    <string name="add_ride">Add ride</string>
    <string name="end_ride">End Ride</string>
    <string name="refresh_rides">Refresh Rides</string>
    <string name="bike_not_found">is not being ridden</string>
</resources>
