<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Button to add ride -->
    <Button
        android:id="@+id/navigate_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_ride" />

    <!-- Button to end ride -->
    <Button
        android:id="@+id/navigate_end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/end_ride" />

    <!-- Button to list rides -->
    <Button
        android:id="@+id/list_rides_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/refresh_rides" />

    <!-- List of all rides -->
    <ListView
        android:id="@+id/mainListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />
</LinearLayout>